# MandelbrotViewer

./: AssetManager.cpp  CMakeLists.txt  GUI.cpp  ImageButton.cpp  ImageButton.h  MandelbrotRenderer.cpp  MandelbrotRenderer.h  README.md  SettingsWindow.h  Widget.cpp  Widget.h  main.cpp  mandelbrot.cpp  mandelbrot.frag  mandelbrot.h
gui/: AssetManager.h  GUI.h  ImageButton.cpp  ImageButton.h  ThemeSwitcher.cpp  ThemeSwitcher.h  Widget.cpp  Widget.h
math/: BigFloat.cpp  BigFloat.h
